# helix-substrate

./: .gitignore  BORN_COMPRESSED_RESULTS_PACKET.md  BORN_COMPRESSED_TRAINING_STATUS.md  COMPONENT_MAP.md  LICENSE  LINEAGE.md  PROOF_CDNA_V3.md  PROOF_HELIX_LINEAR.md  PROOF_HXQ_V3.md  README.md  WO-CPU-FORWARD-BUG.md  WO-RVQ-8X-01.md  WO-SIDECAR-POLICY-01.md  WO-ZAMBA2-7B.md  pyproject.toml
docs/: CROSS_MODEL_SIGNAL_SWEEP.md  FLOWTORCH_DISTILLATION_FINDING.md  GAUGE_ONLY_ROUTING.md  HXQ_CODEC_LADDER.md  HXQ_GGML_CODEC_SPEC.md  HXQ_HYDRA_ROUTER.md  HXQ_META_CODEC.md  HXQ_ONCHAIN_ASSET_SPEC.md  HXQ_TENSOR_CODEC_EVIDENCE.md  REAL_MODEL_SIGNAL_SWEEP_RESULTS.md  RELATED_WORK_COMPRESSION_ROUTING.md
echo_hybrid/: __init__.py  coder_config.py  config.py  config_v2.py  convert_to_hxq.py  eval_and_upload.py  eval_born_hybrid.py  eval_heldout_ppl.py  experiment_stack.py  init_coder.py  prepare_data.py  train_baselines.py  train_born_hybrid.py  train_phase1.py  train_se_routed.py  train_sidecar_aware.py  train_vstep.py  training_gate.py  verify_lloyd_c.py
helix_substrate/: __init__.py  backtest_integrity.py  basin_runtime.py  budget_gate.py  build_manifest_v3.py  cdna_encoder.py  cdna_reader.py  cdnav3_reader.py  cdnav3_writer.py  cli.py  convert.py  convert_gguf.py  convert_safetensors.py  device_utils.py  executor_registry.py  fallback_chain.py  fgip_bridge.py  generate_sidecars_v3.py  ghost_bridge.py  helix_affine_linear.py  helix_linear.py  helix_linear_ste.py  hf_integration.py  hf_quantizer.py  hxq_reader_v3.py  hybrid_scheduler.py  hydra_router.py  index_packing.py  k_allocator.py  kurtosis_gate.py  kurtosis_scan.py  kv_prefix_cache.py  layer_chain_receipt.py  lobe_context_policy.py  lobe_scheduler.py  mamba_scan_chunked.py  mamba_scan_patch.py  market_realism.py  model_adapter.py  model_manager.py  (+45 more)
helix_substrate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
releases/: hxq_q5k_qwen3b_v0.md
scripts/: queue_grouped_vq_phase1.sh
specs/: WO_STE_BACKWARD_C.md
tests/: test_12bit_packing.py  test_backtest_integrity.py  test_basin_runtime.py  test_cdnav3_writer_reader.py  test_compression_routing_signal_sweep.py  test_convert_gguf.py  test_device_utils.py  test_executor_registry.py  test_fail_closed.py  test_fallback_chain.py  test_fused_parity.py  test_gauge_only_routing.py  test_ghost_bridge.py  test_grouped_vq_ste.py  test_helix_linear.py  test_hydra_router.py  test_integration.py  test_k512_uint16.py  test_kurtosis_gate.py  test_kv_prefix_cache.py  test_lobe_scheduler.py  test_lora_ste.py  test_manifest_v3.py  test_market_realism.py  test_morpho_codec.py  test_morpho_fft_routing.py  test_ported_modules.py  test_preflight_router.py  test_quality_gate.py  test_residual_contract.py  test_residual_router.py  test_response_cache.py  test_route_inheritance.py  test_route_regression.py  test_route_shaper.py  test_routing_ledger.py  test_session_advisor.py  test_session_budget.py  test_shaping_policy.py  test_sidecar_v3.py  (+15 more)
tools/: adoption_tracker.py  analyze_recomp_events.py  batch_gpu_eval.py  bench_12bit_packing_poc.py  bench_adaptive_ppl.py  bench_compression_methods.py  bench_donor_consolidate.py  bench_donor_pattern_eval.py  bench_donor_sidecar_survey.py  bench_donor_spectral_profile.py  bench_donor_vq_compat.py  bench_fold_compress.py  bench_hessian_vq.py  bench_hessian_vq_v2.py  (+101 more)
(+131 files in other folders)
