[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-substrate"
version = "0.2.3"
description = "Model weight compression and streaming decode library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "voidstr3m33" }
]
keywords = [
    "llm",
    "compression",
    "streaming",
    "transformer",
    "cdna",
    "quantization",
    "model-weights",
    "neural-network",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "safetensors>=0.4",
]

[project.urls]
Homepage = "https://github.com/echo313unfolding/helix-substrate"
Repository = "https://github.com/echo313unfolding/helix-substrate"
Documentation = "https://github.com/echo313unfolding/helix-substrate#readme"

[project.optional-dependencies]
brotli = ["brotli>=1.0"]
zstd = ["zstandard>=0.20"]
hf = [
    "huggingface_hub>=0.20",
    "safetensors>=0.4",
    "transformers>=4.45,<5.0",
    "accelerate>=0.25",
]
gguf = [
    "gguf>=0.6",
]
dev = [
    "pytest>=7.0",
    "brotli>=1.0",
]
all = [
    "brotli>=1.0",
    "zstandard>=0.20",
    "huggingface_hub>=0.20",
    "safetensors>=0.4",
    "gguf>=0.6",
]

[project.scripts]
helix-substrate = "helix_substrate.cli:main"

[tool.setuptools.packages.find]
include = ["helix_substrate*"]
